--- a/4_convolutions.ipynb
+++ b/4_convolutions.ipynb
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 0,
+   "execution_count": 1,
    "metadata": {
     "cellView": "both",
     "colab": {
@@ -46,7 +46,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 0,
+   "execution_count": 2,
    "metadata": {
     "cellView": "both",
     "colab": {
@@ -88,7 +88,7 @@
      "text": [
       "Training set (200000, 28, 28) (200000,)\n",
       "Validation set (10000, 28, 28) (10000,)\n",
-      "Test set (18724, 28, 28) (18724,)\n"
+      "Test set (10000, 28, 28) (10000,)\n"
      ]
     }
    ],
@@ -123,7 +123,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 0,
+   "execution_count": 3,
    "metadata": {
     "cellView": "both",
     "colab": {
@@ -165,7 +165,7 @@
      "text": [
       "Training set (200000, 28, 28, 1) (200000, 10)\n",
       "Validation set (10000, 28, 28, 1) (10000, 10)\n",
-      "Test set (18724, 28, 28, 1) (18724, 10)\n"
+      "Test set (10000, 28, 28, 1) (10000, 10)\n"
      ]
     }
    ],
@@ -176,7 +176,9 @@
     "\n",
     "import numpy as np\n",
     "\n",
+    "# Reshape the data into 3D cube of 28-by-28-by-1\n",
     "def reformat(dataset, labels):\n",
+    "  # -1 in reshape to let numpy inferrs the shape from the data\n",
     "  dataset = dataset.reshape(\n",
     "    (-1, image_size, image_size, num_channels)).astype(np.float32)\n",
     "  labels = (np.arange(num_labels) == labels[:,None]).astype(np.float32)\n",
@@ -191,7 +193,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 0,
+   "execution_count": 4,
    "metadata": {
     "cellView": "both",
     "colab": {
@@ -223,7 +225,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 0,
+   "execution_count": 5,
    "metadata": {
     "cellView": "both",
     "colab": {
@@ -295,7 +297,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 0,
+   "execution_count": 6,
    "metadata": {
     "cellView": "both",
     "colab": {
@@ -328,7 +330,8 @@
      "user_tz": 480
     },
     "id": "noKFb2UovVFR",
-    "outputId": "28941338-2ef9-4088-8bd1-44295661e628"
+    "outputId": "28941338-2ef9-4088-8bd1-44295661e628",
+    "scrolled": true
    },
    "outputs": [
     {
@@ -336,70 +339,70 @@
      "output_type": "stream",
      "text": [
       "Initialized\n",
-      "Minibatch loss at step 0 : 3.51275\n",
+      "Minibatch loss at step 0: 3.181056\n",
       "Minibatch accuracy: 6.2%\n",
-      "Validation accuracy: 12.8%\n",
-      "Minibatch loss at step 50 : 1.48703\n",
+      "Validation accuracy: 10.0%\n",
+      "Minibatch loss at step 50: 1.485897\n",
       "Minibatch accuracy: 43.8%\n",
-      "Validation accuracy: 50.4%\n",
-      "Minibatch loss at step 100 : 1.04377\n",
+      "Validation accuracy: 58.5%\n",
+      "Minibatch loss at step 100: 0.794144\n",
       "Minibatch accuracy: 68.8%\n",
-      "Validation accuracy: 67.4%\n",
-      "Minibatch loss at step 150 : 0.601682\n",
+      "Validation accuracy: 73.2%\n",
+      "Minibatch loss at step 150: 1.201068\n",
       "Minibatch accuracy: 68.8%\n",
-      "Validation accuracy: 73.0%\n",
-      "Minibatch loss at step 200 : 0.898649\n",
+      "Validation accuracy: 69.0%\n",
+      "Minibatch loss at step 200: 0.854041\n",
       "Minibatch accuracy: 75.0%\n",
-      "Validation accuracy: 77.8%\n",
-      "Minibatch loss at step 250 : 1.3637\n",
-      "Minibatch accuracy: 56.2%\n",
-      "Validation accuracy: 75.4%\n",
-      "Minibatch loss at step 300 : 1.41968\n",
+      "Validation accuracy: 76.4%\n",
+      "Minibatch loss at step 250: 1.114559\n",
       "Minibatch accuracy: 62.5%\n",
-      "Validation accuracy: 76.0%\n",
-      "Minibatch loss at step 350 : 0.300648\n",
+      "Validation accuracy: 76.1%\n",
+      "Minibatch loss at step 300: 0.329096\n",
+      "Minibatch accuracy: 93.8%\n",
+      "Validation accuracy: 75.8%\n",
+      "Minibatch loss at step 350: 1.002461\n",
       "Minibatch accuracy: 81.2%\n",
-      "Validation accuracy: 80.2%\n",
-      "Minibatch loss at step 400 : 1.32092\n",
-      "Minibatch accuracy: 56.2%\n",
-      "Validation accuracy: 80.4%\n",
-      "Minibatch loss at step 450 : 0.556701\n",
+      "Validation accuracy: 81.0%\n",
+      "Minibatch loss at step 400: 0.580268\n",
       "Minibatch accuracy: 81.2%\n",
-      "Validation accuracy: 79.4%\n",
-      "Minibatch loss at step 500 : 1.65595\n",
-      "Minibatch accuracy: 43.8%\n",
-      "Validation accuracy: 79.6%\n",
-      "Minibatch loss at step 550 : 1.06995\n",
+      "Validation accuracy: 80.7%\n",
+      "Minibatch loss at step 450: 0.928814\n",
       "Minibatch accuracy: 75.0%\n",
-      "Validation accuracy: 81.2%\n",
-      "Minibatch loss at step 600 : 0.223684\n",
+      "Validation accuracy: 79.2%\n",
+      "Minibatch loss at step 500: 0.637560\n",
+      "Minibatch accuracy: 81.2%\n",
+      "Validation accuracy: 81.1%\n",
+      "Minibatch loss at step 550: 0.483019\n",
+      "Minibatch accuracy: 81.2%\n",
+      "Validation accuracy: 81.4%\n",
+      "Minibatch loss at step 600: 0.766868\n",
+      "Minibatch accuracy: 81.2%\n",
+      "Validation accuracy: 81.5%\n",
+      "Minibatch loss at step 650: 0.683647\n",
+      "Minibatch accuracy: 81.2%\n",
+      "Validation accuracy: 81.3%\n",
+      "Minibatch loss at step 700: 0.445653\n",
+      "Minibatch accuracy: 87.5%\n",
+      "Validation accuracy: 81.7%\n",
+      "Minibatch loss at step 750: 0.509275\n",
+      "Minibatch accuracy: 87.5%\n",
+      "Validation accuracy: 82.0%\n",
+      "Minibatch loss at step 800: 0.194940\n",
       "Minibatch accuracy: 100.0%\n",
-      "Validation accuracy: 82.3%\n",
-      "Minibatch loss at step 650 : 0.619602\n",
-      "Minibatch accuracy: 87.5%\n",
-      "Validation accuracy: 81.8%\n",
-      "Minibatch loss at step 700 : 0.812091\n",
-      "Minibatch accuracy: 75.0%\n",
-      "Validation accuracy: 82.4%\n",
-      "Minibatch loss at step 750 : 0.276302\n",
-      "Minibatch accuracy: 87.5%\n",
-      "Validation accuracy: 82.3%\n",
-      "Minibatch loss at step 800 : 0.450241\n",
+      "Validation accuracy: 83.0%\n",
+      "Minibatch loss at step 850: 0.866467\n",
+      "Minibatch accuracy: 68.8%\n",
+      "Validation accuracy: 83.2%\n",
+      "Minibatch loss at step 900: 0.540632\n",
       "Minibatch accuracy: 81.2%\n",
-      "Validation accuracy: 82.3%\n",
-      "Minibatch loss at step 850 : 0.137139\n",
-      "Minibatch accuracy: 93.8%\n",
-      "Validation accuracy: 82.3%\n",
-      "Minibatch loss at step 900 : 0.52664\n",
-      "Minibatch accuracy: 75.0%\n",
-      "Validation accuracy: 82.2%\n",
-      "Minibatch loss at step 950 : 0.623835\n",
-      "Minibatch accuracy: 87.5%\n",
-      "Validation accuracy: 82.1%\n",
-      "Minibatch loss at step 1000 : 0.243114\n",
-      "Minibatch accuracy: 93.8%\n",
-      "Validation accuracy: 82.9%\n",
-      "Test accuracy: 90.0%\n"
+      "Validation accuracy: 82.7%\n",
+      "Minibatch loss at step 950: 0.474024\n",
+      "Minibatch accuracy: 81.2%\n",
+      "Validation accuracy: 81.6%\n",
+      "Minibatch loss at step 1000: 0.382137\n",
+      "Minibatch accuracy: 81.2%\n",
+      "Validation accuracy: 83.5%\n",
+      "Test accuracy: 89.8%\n"
      ]
     }
    ],
@@ -416,7 +419,7 @@
     "    feed_dict = {tf_train_dataset : batch_data, tf_train_labels : batch_labels}\n",
     "    _, l, predictions = session.run(\n",
     "      [optimizer, loss, train_prediction], feed_dict=feed_dict)\n",
-    "    if (step % 50 == 0):\n",
+    "    if (step % 50 == 0):t\n",
     "      print('Minibatch loss at step %d: %f' % (step, l))\n",
     "      print('Minibatch accuracy: %.1f%%' % accuracy(predictions, batch_labels))\n",
     "      print('Validation accuracy: %.1f%%' % accuracy(\n",
@@ -438,6 +441,50 @@
     "The convolutional model above uses convolutions with stride 2 to reduce the dimensionality. Replace the strides by a max pooling operation (`nn.max_pool()`) of stride 2 and kernel size 2.\n",
     "\n",
     "---"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "# Cell author: Hoang NT\n",
+    "# Cell : Max pooling convolutional network\n",
+    "\n",
+    "_alpha = 0.05 # Learning rate\n",
+    "batch_size = 16\n",
+    "patch_size = 5\n",
+    "depth = 16\n",
+    "num_hidden = 64\n",
+    "\n",
+    "# Build the computational graph\n",
+    "# Input:\n",
+    "  '''\n",
+    "  train_data: (tf.placeholder) Input data for training.\n",
+    "  '''\n",
+    "# Output:\n",
+    "  '''\n",
+    "  logits: (tf.Tensor) Tensor holding result of the graph.\n",
+    "  '''\n",
+    "def inference(train_data):\n",
+    "    \n",
+    "    conv = tf.nn.conv2d(data, layer1_weights, [1, 2, 2, 1], padding = 'SAME')\n",
+    "    hidden = tf.nn.relu(conv + layer1_biases)\n",
+    "    conv = tf.nn.conv2d(hidden, layer2_weights, [1, 2, 2, 1], padding = 'SAME')\n",
+    "    hidden = tf.nn.relu(conv + layer2_biases)\n",
+    "    shape = hidden.get_shape().as_list()\n",
+    "    reshape = tf.reshape(hidden, [shape[0], shape[1] * shape[2] * shape[3]])\n",
+    "    hidden = tf.nn.relu(tf.matmul(reshape, layer3_weights) + layer3_biases)\n",
+    "    return tf.matmul(hidden, layer4_weights) + layer4_biases\n",
+    "\n",
+    "# Training computation\n",
+    "# Input:\n",
+    "  '''\n",
+    "  \n",
+    "  '''"
    ]
   },
   {
@@ -480,7 +527,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython2",
-   "version": "2.7.10"
+   "version": "2.7.11+"
   }
  },
  "nbformat": 4,
