re arange files

--- a/notebooks/notMNIST.ipynb
+++ b/notebooks/notMNIST.ipynb
@@ -7,20 +7,20 @@
     "id": "5hIbr52I7Z7U"
    },
    "source": [
-    "Deep Learning\n",
-    "=============\n",
+    "## Dataset: notMNIST\n",
     "\n",
-    "Assignment 1\n",
-    "------------\n",
+    "In this mini project (Udacity Deep Learning), I will investigate the `notMNIST` dataset containing various letters of different fonts. Then I will build a neural network to recognize the letters.\n",
     "\n",
-    "The objective of this assignment is to learn about simple data curation practices, and familiarize you with some of the data we'll be reusing later.\n",
+    "The `notMNIST` data is provided [here](http://yaroslavvb.blogspot.com/2011/09/notmnist-dataset.html). This dataset is named `notMNIST` to prevent confusion with [MNIST](http://yann.lecun.com/exdb/mnist/) dataset. However, `notMNIST` is a harder task and the data is a lot less _clean_ than MNIST.\n",
     "\n",
-    "This notebook uses the [notMNIST](http://yaroslavvb.blogspot.com/2011/09/notmnist-dataset.html) dataset to be used with python experiments. This dataset is designed to look like the classic [MNIST](http://yann.lecun.com/exdb/mnist/) dataset, while looking a little more like real data: it's a harder task, and the data is a lot less 'clean' than MNIST."
+    "## Requirement\n",
+    "\n",
+    "I use: `Python-3.5.2`, `jupyter-1.0.0`, `numpy-1.11.2`, `scikit-learn-0.18.1`, `matplotlib-1.5.3`."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": 1,
    "metadata": {
     "cellView": "both",
     "colab": {
@@ -35,9 +35,6 @@
    },
    "outputs": [],
    "source": [
-    "# These are all the modules we'll be using later. Make sure you can import them\n",
-    "# before proceeding further.\n",
-    "from __future__ import print_function, division\n",
     "import matplotlib.pyplot as plt\n",
     "import numpy as np\n",
     "import os\n",
@@ -47,7 +44,7 @@
     "from scipy import ndimage\n",
     "from sklearn.linear_model import LogisticRegression\n",
     "from six.moves.urllib.request import urlretrieve\n",
-    "from six.moves import cPickle as pickle"
+    "import pickle"
    ]
   },
   {
@@ -57,12 +54,14 @@
     "id": "jNWGtZaXn-5j"
    },
    "source": [
-    "First, we'll download the dataset to our local machine. The data consists of characters rendered in a variety of fonts on a 28x28 image. The labels are limited to 'A' through 'J' (10 classes). The training set has about 500k and the testset 19000 labelled examples. Given these sizes, it should be possible to train models quickly on any machine."
+    "## Data retrieve\n",
+    "\n",
+    "The data consists of characters rendered in a variety of fonts on a 28x28 image. The labels are limited to 'A' through 'J' (10 classes). The training set has about 500k and the testset 19000 labelled examples. In here, I download the data to a separate folder due to its size."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 10,
    "metadata": {
     "cellView": "both",
     "colab": {
@@ -102,25 +101,27 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Found and verified notMNIST_large.tar.gz\n",
-      "Found and verified notMNIST_small.tar.gz\n"
+      "Found and verified ../../../../LargeData/notMNIST_large.tar.gz\n",
+      "Found and verified ../../../../LargeData/notMNIST_small.tar.gz\n"
      ]
     }
    ],
    "source": [
     "url = 'http://yaroslavvb.com/upload/notMNIST/'\n",
     "\n",
-    "def maybe_download(filename, expected_bytes, force=False):\n",
-    "  \"\"\"Download a file if not present, and make sure it's the right size.\"\"\"\n",
-    "  if force or not os.path.exists(filename):\n",
-    "    filename, _ = urlretrieve(url + filename, filename)\n",
-    "  statinfo = os.stat(filename)\n",
-    "  if statinfo.st_size == expected_bytes:\n",
-    "    print('Found and verified', filename)\n",
-    "  else:\n",
-    "    raise Exception(\n",
-    "      'Failed to verify' + filename + '. Can you get to it with a browser?')\n",
-    "  return filename\n",
+    "def maybe_download(filename, expected_bytes, force=False, prefix='../../../../LargeData/'):\n",
+    "    \"\"\"Download a file if not present, and make sure it's the right size.\"\"\"\n",
+    "    if force or not os.path.exists(prefix+filename):\n",
+    "        filename, _ = urlretrieve(url + filename, prefix+filename)\n",
+    "    else:\n",
+    "        filename = prefix+filename\n",
+    "    statinfo = os.stat(filename)\n",
+    "    if statinfo.st_size == expected_bytes:\n",
+    "        print('Found and verified', filename)\n",
+    "    else:\n",
+    "        raise Exception(\n",
+    "        'Failed to verify' + filename + '. Can you get to it with a browser?')\n",
+    "    return filename\n",
     "\n",
     "train_filename = maybe_download('notMNIST_large.tar.gz', 247336696)\n",
     "test_filename = maybe_download('notMNIST_small.tar.gz', 8458043)"
@@ -133,8 +134,7 @@
     "id": "cC3p0oEyF8QT"
    },
    "source": [
-    "Extract the dataset from the compressed .tar.gz file.\n",
-    "This should give you a set of directories, labelled A through J."
+    "Extract the dataset from the compressed .tar.gz file to a set of directories A-J"
    ]
   },
   {
@@ -190,26 +190,25 @@
     "num_classes = 10\n",
     "np.random.seed(133)\n",
     "\n",
-    "def maybe_extract(filename, force=False):\n",
-    "  root = os.path.splitext(os.path.splitext(filename)[0])[0]  # remove .tar.gz\n",
-    "  if os.path.isdir(root) and not force:\n",
-    "    # You may override by setting force=True.\n",
-    "    print('%s already present - Skipping extraction of %s.' % (root, filename))\n",
-    "  else:\n",
-    "    print('Extracting data for %s. This may take a while. Please wait.' % root)\n",
-    "    tar = tarfile.open(filename)\n",
+    "def maybe_extract(filename, force=False, prefix='../../../../LargeData/'):\n",
+    "    root = os.path.splitext(os.path.splitext(prefix+filename)[0])[0]  # remove .tar.gz\n",
+    "    if os.path.isdir(root) and not force:\n",
+    "        print('%s already present - Skipping extraction of %s.' % (root, filename))\n",
+    "    else:\n",
+    "        print('Extracting data for %s. This may take a while. Please wait.' % root)\n",
+    "    tar = tarfile.open(prefix+filename)\n",
     "    sys.stdout.flush()\n",
     "    tar.extractall()\n",
     "    tar.close()\n",
-    "  data_folders = [\n",
-    "    os.path.join(root, d) for d in sorted(os.listdir(root))\n",
-    "    if os.path.isdir(os.path.join(root, d))]\n",
-    "  if len(data_folders) != num_classes:\n",
-    "    raise Exception(\n",
-    "      'Expected %d folders, one per class. Found %d instead.' % (\n",
-    "        num_classes, len(data_folders)))\n",
-    "  print(data_folders)\n",
-    "  return data_folders\n",
+    "    data_folders = [\n",
+    "        os.path.join(root, d) for d in sorted(os.listdir(root))\n",
+    "        if os.path.isdir(os.path.join(root, d))]\n",
+    "    if len(data_folders) != num_classes:\n",
+    "        raise Exception(\n",
+    "            'Expected %d folders, one per class. Found %d instead.' % (\n",
+    "            num_classes, len(data_folders)))\n",
+    "    print(data_folders)\n",
+    "    return data_folders\n",
     "  \n",
     "train_folders = maybe_extract(train_filename)\n",
     "test_folders = maybe_extract(test_filename)"
@@ -2035,6 +2034,7 @@
   }
  ],
  "metadata": {
+  "anaconda-cloud": {},
   "colab": {
    "default_view": {},
    "name": "1_notmnist.ipynb",
@@ -2043,21 +2043,21 @@
    "views": {}
   },
   "kernelspec": {
-   "display_name": "Python 2",
+   "display_name": "Python [conda env:mlnano]",
    "language": "python",
-   "name": "python2"
+   "name": "conda-env-mlnano-py"
   },
   "language_info": {
    "codemirror_mode": {
     "name": "ipython",
-    "version": 2
+    "version": 3
    },
    "file_extension": ".py",
    "mimetype": "text/x-python",
    "name": "python",
    "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython2",
-   "version": "2.7.10"
+   "pygments_lexer": "ipython3",
+   "version": "3.5.2"
   }
  },
  "nbformat": 4,
